TestApp2/K8s/TestWebApp2Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2-deployment
  labels:
    app: webapp2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp1
        image: basicpywebapp:0.01
        imagePullPolicy: Never
        ports:
        - containerPort: 8001
