TestApp2/K8s/TestWebApp2Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp2-service
spec:
  type: NodePort
  selector:
    app: webapp2
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8001
      nodePort: 30101
